Bug 410554 - Rotate canvas using shorcut SHIFT + ALT + SPACEBAR no longer snaps to predefinied degrees
Summary: Rotate canvas using shorcut SHIFT + ALT + SPACEBAR no longer snaps to predefi...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-03 22:59 UTC by ZeroFrost
Modified: 2020-04-30 17:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ZeroFrost 2019-08-03 22:59:53 UTC
SUMMARY 
Rotate canvas using shorcut SHIFT + ALT + SPACEBAR no longer snaps to predefinied degrees that are increments of 15

STEPS TO REPRODUCE
1. Start Krita and create new canvas
2. Use SHIFT + SPACEBAR to rotade canvas by 3(example) degrees
3. Use SHIFT + ALT + SPACEBAR to rotate canvas

OBSERVED RESULT
Snapping totation will add or remove 15degrees to initail 3 

EXPECTED RESULT
Snapping totation should be increments of 15 with ability to snap rotation to 0degrees

SOFTWARE/OS VERSIONS
Windows: 10
Krita: 4.2.5

ADDITIONAL INFORMATION
Bug was introduced after 4.3.0-prealpha (git 639e0d2)
Comment 1 David REVOY 2019-08-03 23:13:29 UTC
Yes, I confirm the bug, I could reproduce. 

The behavior of rotating canvas with CTRL+ALT+SHIFT isn't 'absolute' anymore and can't go back to 0°... I quickly tested in 4.1.5appimage and it worked fine at that time; and I can reproduce it not working on compiled krita/4.2 branch too on Kubuntu Linux. Could it be https://cgit.kde.org/krita.git/commit/?id=63bef1e49334f67b4bb8549e427fdb59e119a6b0 ?
Comment 2 Dmitry Kazakov 2020-04-30 14:01:33 UTC
Yes, this commit is surely to blame :)
Comment 3 Dmitry Kazakov 2020-04-30 17:22:49 UTC
Git commit dc1530054dfc4b371bb7c1a9b280b3074d6b6d49 by Dmitry Kazakov.
Committed on 30/04/2020 at 17:22.
Pushed by dkazakov into branch 'master'.

Fix descrete rotation to be aligned to absolute position, not relative

That was a regression from 63bef1e49334f67b4bb8549e427fdb59e119a6b0

M  +9    -1    libs/ui/input/kis_rotate_canvas_action.cpp

https://invent.kde.org/kde/krita/commit/dc1530054dfc4b371bb7c1a9b280b3074d6b6d49
Comment 4 Dmitry Kazakov 2020-04-30 17:23:40 UTC
Git commit e9595aa09f884c53ea8af22e4c467463c217ecc3 by Dmitry Kazakov.
Committed on 30/04/2020 at 17:23.
Pushed by dkazakov into branch 'krita/4.3'.

Fix descrete rotation to be aligned to absolute position, not relative

That was a regression from 63bef1e49334f67b4bb8549e427fdb59e119a6b0

M  +9    -1    libs/ui/input/kis_rotate_canvas_action.cpp

https://invent.kde.org/kde/krita/commit/e9595aa09f884c53ea8af22e4c467463c217ecc3