Fix descrete rotation to be aligned to absolute position, not relative

That was a regression from 63bef1e49334f67b4bb8549e427fdb59e119a6b0

BUG:410554